# claude-code-cli-setup

./: CLAUDE.md  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backup/archive/: TASKS.md  command_registration.md  phase_4_review_summary.md  task_5_1_completion_summary.md
docs/: QUICK_START.md  README.md
docs/api/: PLUGINS.md  PLUGIN_API.md  PLUGIN_DEVELOPMENT.md
docs/development/: ARCHITECTURE.md  CLI_IMPLEMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  MIGRATION.md  PYTHON_SETUP.md
docs/guides/: CLI_REFERENCE.md  GUARDRAILS.md  HOOKS.md  SETTINGS_GUIDE.md  SETUP.md  TEMPLATES.md  TROUBLESHOOTING.md  USAGE.md
src/claude_code_setup/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  types.py  version.py
src/claude_code_setup/commands/: __init__.py  add.py  enhanced_init.py  hooks.py  init.py  interactive.py  list.py  plugins.py  remove.py  settings.py  update.py
src/claude_code_setup/core/: __init__.py  extensions.py  loader.py  registry.py
src/claude_code_setup/hooks/aws/deployment-guard/: metadata.json  validate_aws_command.py
src/claude_code_setup/hooks/security/command-validator/: command_validator.py  metadata.json
src/claude_code_setup/hooks/security/file-change-limiter/: README.md  limit_file_changes.py  metadata.json
src/claude_code_setup/hooks/security/sensitive-file-protector/: metadata.json  sensitive_file_protector.py
src/claude_code_setup/hooks/testing/test-enforcement/: metadata.json  run_tests_on_change.sh
src/claude_code_setup/plugins/: __init__.py  loader.py  registry.py  types.py
src/claude_code_setup/plugins/agents/: __init__.py  executor.py  registry.py  types.py
src/claude_code_setup/plugins/bundles/: essential.yaml  python-full-stack.yaml
src/claude_code_setup/plugins/repository/code-quality/: plugin.yaml
src/claude_code_setup/plugins/repository/python-developer/: plugin.yaml
src/claude_code_setup/plugins/repository/security-essentials/: plugin.yaml
src/claude_code_setup/plugins/workflows/: __init__.py  executor.py  registry.py  types.py
src/claude_code_setup/settings/: defaults.json
src/claude_code_setup/settings/permissions/: git.json  node.json  package-managers.json  python.json  shell.json
src/claude_code_setup/settings/themes/: dark.json  default.json
src/claude_code_setup/templates/node/: optimization.md
src/claude_code_setup/templates/python/: optimization.md
src/claude_code_setup/ui/: __init__.py  progress.py  prompts.py  styles.py  validation.py
src/claude_code_setup/utils/: __init__.py  dependency_validator.py  fs.py  hook.py  hook_installer.py  logger.py  plugin_agent_loader.py  plugin_hook_loader.py  plugin_template_loader.py  plugin_workflow_loader.py  settings.py  template.py  template_installer.py  template_validator.py
tests/: __init__.py  conftest.py  test_add_command.py  test_add_with_plugins.py  test_agent_executor.py  test_agent_registry.py  test_agent_types.py  test_cli.py  test_cli_integration.py  test_command_registration.py  test_fs.py  test_hook.py  test_hook_installer.py  test_hooks_command.py  test_init_command.py  test_interactive_workflows.py  test_list_command.py  test_logger.py  test_package.py  test_plugin_agent_loader.py  test_plugin_hook_integration.py  test_plugin_template_integration.py  test_remove_command.py  test_settings.py  test_settings_command.py  test_template.py  test_template_installer.py  test_template_validator.py  test_ui_components.py  test_ui_progress.py  test_ui_styles.py  test_update_command.py  test_workflow_registry.py  test_workflow_types.py
tests/docker/: Dockerfile.python  run-python-tests.sh  test-installed-package-python.sh
(+8 files in other folders)
